gruppo_d/force-app/main/default/objects/Manifestazione__c/fields/Luogo_Manifestazione__c.field-meta.xml
<CustomField>
    <fullName>Luogo_Manifestazione__c</fullName>
    <label>Luogo Manifestazione</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>