gruppo_d/force-app/main/default/objects/Manifestazione__c/fields/Organizzatore__c.field-meta.xml
<CustomField>
    <fullName>Organizzatore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizzatore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manifestazioni</relationshipLabel>
    <relationshipName>Manifestazioni</relationshipName>
    <type>Lookup</type>
</CustomField>